# edubot

./: .gitignore  .pre-commit-config.yaml  GREETING  README.md  SAMPLE_CONFIG.ini  config.yaml  moodlebot_init  pyproject.toml  requirements.txt  sample.config.yaml  setup.py  transcript_test.py
bot/: gpt.py  integration.py
edubot/: __init__.py  bot.py  config.py  edubot.py  sql.py  transcription.py  types.py
matrix/: bot_commands.py  callbacks.py  chat_functions.py  main.py  message_responses.py
moodlebot/: __init__.py  bot_commands.py  callbacks.py  chat_functions.py  config.py  g.py  gpt.py  main.py  message_responses.py
