[tool.poetry]
name = "edubot"
version = "0.6.7"
description = ""
authors = ["exciteabletom <tom@digitalnook.net>", "moodler <martin@moodle.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = {version = ">=1.4.45,<1.5.0", extras = ["mypy"]}
openai = "^0.27.2"
stability-sdk = "^0.4.0"
pillow = "^9.4.0"
beautifulsoup4 = "^4.11.2"
trafilatura = "^1.4.1"
replicate = "^0.8.1"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.0"
mypy = "^1.1.1"

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
